# akonadi-calendar

./: .clang-tidy  .codespellrc  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  KF5AkonadiCalendarConfig.cmake.in  KPimAkonadiCalendarConfig.cmake.in  KPimAkonadiCalendarCoreConfig.cmake.in  README.md  REUSE.toml  TODO  akonadi-calendar-version.h.cmake  akonadi-calendar-version.h.in  akonadi-calendar.categories  akonadi-calendar.renamecategories  akonadi-calendar_tests_export.h.in  cppcheck-suppressions.xml  metainfo.yaml
.reuse/: dep5
autotests/: CMakeLists.txt  calendarbasetest.cpp  calendarbasetest.h  collectioncalendartest.cpp  etmcalendartest.cpp  etmcalendartest.h  fetchjobcalendartest.cpp  helper.cpp  helper.h  historytest.cpp  historytest.h  incidencechangertest.cpp  itiphandlertest.cpp  itiphandlertest.h  kcalcoreserializertest.cpp  mailclienttest.cpp  todopurgertest.cpp  todopurgertest.h  unittestbase.cpp  unittestbase.h
autotests/gnupg_home/: .#lk0x000055578376f8d0.bifrost.65618  .#lk0x0000557aa7ed38a0.Brokkr.320445  .#lk0x00005581b84e78a0.Brokkr.80512  .#lk0x000055858a70d8d0.bifrost.55960  .#lk0x0000561916f078d0.bifrost.88950  .#lk0x00005630b5fd58d0.bifrost.88819  CMakeLists.txt
autotests/gnupg_home/openpgp-revocs.d/: 48BAF7236E952E4BDCF3748EA59CDFE1091524DC.rev  7E501DEA81F62DB17389393325058D1857FDD0E7.rev  E187A7C3FC78B3BDD2B3EF6495B9B82200EF61C6.rev
autotests/gnupg_home/private-keys-v1.d/: 74D5844526608A22B14BD5320F3CF41122175D80.key  DC8D6F65743B70AB2EDFD4E2D067C66E62AB82AB.key
autotests/itip_data/: invited_us  invited_us_daily_cancel_recid01
autotests/unittestenv/: config-mysql-fs.xml  config.xml
autotests/unittestenv/xdgconfig/: emailidentities
calendar-plugin/: CMakeLists.txt  akonadicalendarplugin.cpp  akonadicalendarplugin.h  singlecollectioncalendar.cpp  singlecollectioncalendar.h
cmake/modules/: kdepim_add_gpg_crypto_test.cmake  kdepim_generate_crypto_test_wrapper.cmake
examples/etmcalendar/: main.cpp
po/ar/: kalendarac.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/ast/: kalendarac.po  libakonadi-calendar5-serializer.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/az/: kalendarac.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/bg/: kalendarac.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/bs/: libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/ca/: kalendarac.po  libakonadi-calendar5-serializer.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/ca@valencia/: kalendarac.po  libakonadi-calendar5-serializer.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/cs/: kalendarac.po  libakonadi-calendar5-serializer.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/da/: kalendarac.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/de/: kalendarac.po  libakonadi-calendar5-serializer.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/el/: kalendarac.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/en_GB/: kalendarac.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/eo/: kalendarac.po  libakonadi-calendar5-serializer.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/es/: kalendarac.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/et/: libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/eu/: kalendarac.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/fi/: kalendarac.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/fr/: kalendarac.po  libakonadi-calendar5-serializer.po  libakonadi-calendar5.po  libakonadi-calendar6-serializer.po  libakonadi-calendar6.po
po/ga/: kalendarac.po  libakonadi-calendar5.po  (+2 more)
python/: CMakeLists.txt  bindings.h  typesystem_akonadi_calendar.xml
reminder-daemon/: CMakeLists.txt  Messages.sh  alarmnotification.cpp  alarmnotification.h  kalendarac.notifyrc  kalendaracmain.cpp  kalendaralarmclient.cpp  kalendaralarmclient.h  org.kde.kalendarac.desktop  org.kde.kalendarac.service.in  suspenddialog.cpp  suspenddialog.h
reminder-daemon/tests/: CMakeLists.txt  notification_gui.cpp  notificationobject.cpp  notificationobject.h
serializers/: CMakeLists.txt  Messages.sh  akonadi_serializer_kcalcore.cpp  akonadi_serializer_kcalcore.desktop  akonadi_serializer_kcalcore.h
src/: CMakeLists.txt  Messages.sh  akonadi-calendar-index.qdoc  akonadi-calendar.qdoc  akonadi-calendar.qdocconf  akonadi-calendar_tests_export.h  akonadicalendar_debug.cpp  akonadicalendar_debug.h  blockalarmsattribute.cpp  blockalarmsattribute.h  calendarbase.cpp  calendarbase.h  calendarbase_p.h  calendarclipboard.cpp  calendarclipboard.h  calendarclipboard_p.h  calendarmodel.cpp  calendarmodel_p.h  calendarsettings.kcfg  calendarsettings.kcfgc  calendarutils.cpp  calendarutils.h  calfilterpartstatusproxymodel.cpp  calfilterpartstatusproxymodel.h  calfilterpartstatusproxymodel_p.cpp  calfilterpartstatusproxymodel_p.h  calfilterproxymodel.cpp  calfilterproxymodel.h  calfilterproxymodel_p.cpp  calfilterproxymodel_p.h  collectioncalendar.cpp  collectioncalendar.h  etmcalendar.cpp  etmcalendar.h  etmcalendar_p.h  fetchjobcalendar.cpp  fetchjobcalendar.h  fetchjobcalendar_p.h  freebusydownloadjob_p.cpp  freebusydownloadjob_p.h  (+54 more)
src/core/: CMakeLists.txt  akonadi-calendar-core.qdoc  akonadi-calendar-core.qdocconf  freebusyproviderbase.cpp  freebusyproviderbase.h  freebusyproviderbase_p.h
src/interfaces/: org.freedesktop.Akonadi.Resource.FreeBusyProvider.xml
(+150 files in other folders)
